spacing margin fixed padding 6 home

--- a/docs/style.css
+++ b/docs/style.css
@@ -43,7 +43,7 @@ section.Corpus_Analysis {color:#FFFFFF;
       font-family: arial, helvetica, sans-serif; 
       padding:15px; 
       line-height:1.4em}
-section.Home_Buttons {background-color:#C2DFFF;background-image: none; padding: 2em; margin:6cm}
+section.Home_Buttons {background-color:#C2DFFF;background-image: none; padding: 6em; margin:auto}
 
 
 
